; ModuleID = '/home/carl/AnghaBench/linux/drivers/i3c/extr_master.c_i3c_device_probe.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/i3c/extr_master.c_i3c_device_probe.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.i3c_device = type { i32 }
%struct.i3c_driver = type { i32 (%struct.i3c_device.0*)* }
%struct.i3c_device.0 = type opaque

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*)* @i3c_device_probe to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @i3c_device_probe(%struct.device* %0) #0 {
  %2 = alloca %struct.device*, align 8
  %3 = alloca %struct.i3c_device*, align 8
  %4 = alloca %struct.i3c_driver*, align 8
  store %struct.device* %0, %struct.device** %2, align 8
  %5 = load %struct.device*, %struct.device** %2, align 8
  %6 = call %struct.i3c_device* @dev_to_i3cdev(%struct.device* %5)
  store %struct.i3c_device* %6, %struct.i3c_device** %3, align 8
  %7 = load %struct.device*, %struct.device** %2, align 8
  %8 = getelementptr inbounds %struct.device, %struct.device* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call %struct.i3c_driver* @drv_to_i3cdrv(i32 %9)
  store %struct.i3c_driver* %10, %struct.i3c_driver** %4, align 8
  %11 = load %struct.i3c_driver*, %struct.i3c_driver** %4, align 8
  %12 = getelementptr inbounds %struct.i3c_driver, %struct.i3c_driver* %11, i32 0, i32 0
  %13 = load i32 (%struct.i3c_device.0*)*, i32 (%struct.i3c_device.0*)** %12, align 8
  %14 = load %struct.i3c_device*, %struct.i3c_device** %3, align 8
  %15 = bitcast %struct.i3c_device* %14 to %struct.i3c_device.0*
  %16 = call i32 %13(%struct.i3c_device.0* %15)
  ret i32 %16
}

declare dso_local %struct.i3c_device* @dev_to_i3cdev(%struct.device*) #1

declare dso_local %struct.i3c_driver* @drv_to_i3cdrv(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
